# opencattus

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dependencies.cmake  Jenkinsfile  ProjectOptions.cmake  README.md  README_DOCS.md  buildrpm.sh  conanfile.py  example.answerfile.ini  format-changed.sh  opencattus.repo.example  setupDevEnvironment.sh
.claude/: settings.local.json
.claude/commands/: release.md
.github/workflows/: clang-format-check.yml  el9-libvirt-lab.yml  mirror-bitbucket.yml  test.yml
ansible/: Dockerfile  README.md  Vagrantfile  fix-ansible-test.patch  setup.yml
ansible/roles/: aide.h
ci/: build.sh  check-format.sh  preflight.sh  project.yaml  setup-el10.sh  setup-el8.sh  setup-el9.sh  setup-ubuntu2404.sh
ci/lab/: alma10-confluent.env  alma10-xcat.env  alma9-confluent.env  alma9-xcat.env  ubuntu2404-confluent.env  ubuntu2404-xcat.env
cmake/: CPM.cmake  CPackProjectConfig.cmake.in  CPackProperties.cmake  Cache.cmake  CommonLibraries.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Findlibxcrypt.cmake  GenerateEmbeddedRepos.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  conan_provider.cmake
configured_files/: CMakeLists.txt  config.hpp.in
docs/: rpm-publishing.md
docs/source/: conf.py  index.rst
docs/source/overview/: index.rst  sys_os_requirements.rst
fuzz_test/: fuzz_tester.cpp
include/cloysterhpc/: NFS.h  dbus_client.h  diskImage.h  functions.h  network.h
include/cloysterhpc/models/: answerfile.h  cluster.h  os.h
include/cloysterhpc/patterns/: singleton.h  strongtypedef.h  wrapper.h
include/cloysterhpc/services/: cache.h  confluent.h  files.h  init.h  options.h  osservice.h  provisioner.h  repos.h  runner.h  scriptbuilder.h  shell.h  xcat.h
include/cloysterhpc/utils/: containers.h  enums.h  formatters.h  network.h  optional.h  singleton.h  string.h
include/opencattus/: NFS.h  concepts.h  connection.h  const.h  daemon_handler.h  dbus_client.h  diskImage.h  functions.h  messagebus.h  network.h  ofed.h  opencattus.h  tempdir.h  verification.h
include/opencattus/mailsystem/: postfix.h
include/opencattus/models/: answerfile.h  cluster.h  cpu.h  headnode.h  node.h  os.h  pbs.h  queuesystem.h  server.h  slurm.h
include/opencattus/patterns/: singleton.h  wrapper.h
include/opencattus/presenter/: Presenter.h  PresenterGeneralSettings.h  PresenterHostId.h  PresenterInfiniband.h  PresenterInstall.h  PresenterInstructions.h  PresenterLocale.h  PresenterMailSystem.h  PresenterNetwork.h  PresenterNodes.h  PresenterNodesOperationalSystem.h  PresenterOpenHPC.h  PresenterPreflight.h  PresenterProvisioner.h  PresenterQueueSystem.h  PresenterRepository.h  PresenterTime.h  PresenterWelcome.h
include/opencattus/services/: IService.h  bmc.h  cache.h  confluent.h  execution.h  files.h  init.h  log.h  options.h  osservice.h  provisioner.h  repos.h  runner.h  scriptbuilder.h  shell.h  timezone.h  tui_session.h  xcat.h
include/opencattus/tmpl/: slurm.conf.tmpl
include/opencattus/utils/: containers.h  enums.h  formatters.h  network.h  optional.h  ranges.h  singleton.h  string.h
include/opencattus/view/: newt.h  view.h
include/testing/: test_message_bus.h
repos/: alma.conf  oracle.conf  repos.conf  rhel.conf  rocky-upstream.conf  rocky-vault.conf
rpmspecs/: opencattus.spec
scripts/: build-deb.sh  publish-debs.sh  publish-rpms.sh
scripts/repo-files/el10/: versatushpc-opencattus.repo
scripts/repo-files/el8/: versatushpc-opencattus.repo
scripts/repo-files/el9/: versatushpc-opencattus.repo
scripts/repo-files/ubuntu24/: versatushpc-opencattus.list
scripts/repo-files/ubuntu2404/: versatushpc-opencattus.list
src/: CMakeLists.txt  NFS.cpp  connection.cpp  daemon_handler.cpp  dbus_client.cpp  diskImage.cpp  functions.cpp  main.cpp  network.cpp  ofed.cpp  tempdir.cpp  verification.cpp
src/mailsystem/: postfix.cpp
src/models/: answerfile.cpp  cluster.cpp  cpu.cpp  headnode.cpp  node.cpp  os.cpp  pbs.cpp  queuesystem.cpp  server.cpp  slurm.cpp
src/presenter/: PresenterGeneralSettings.cpp  PresenterHostId.cpp  PresenterInfiniband.cpp  PresenterInstall.cpp  PresenterInstructions.cpp  PresenterLocale.cpp  PresenterMailSystem.cpp  PresenterNetwork.cpp  PresenterNodes.cpp  PresenterNodesOperationalSystem.cpp  PresenterOpenHPC.cpp  PresenterPreflight.cpp  PresenterProvisioner.cpp  PresenterQueueSystem.cpp  PresenterRepository.cpp  PresenterTime.cpp  PresenterWelcome.cpp
src/services/: IService.cpp  bmc.cpp  cache.cpp  confluent.cpp  files.cpp  init.cpp  log.cpp  options.cpp  osservice.cpp  repos.cpp  runner.cpp  scriptbuilder.cpp  shell.cpp  timezone.cpp  tui_session.cpp  xcat.cpp
src/services/ansible/: role.cpp  roles.cpp
src/services/ansible/roles/: aide.cpp  audit.cpp  base.cpp  check.cpp  confluent.cpp  dump.cpp  fail2ban.cpp  firewall.cpp  locale.cpp  network.cpp  nfs.cpp  ofed.cpp  ohpc.cpp  ood.cpp  provisioner.cpp  queuesystem.cpp  repos.cpp  selinux.cpp  slurm.cpp  spack.cpp  sshd.cpp  timesync.cpp  todo.txt  xcat.cpp
src/utils/: network.cpp
src/view/: newt.cpp  newtFieldMenu.cpp  newtListMenu.cpp  newtMessage.cpp  newtOkCancelMessage.cpp  newtYesNoQuestion.cpp
test/: CMakeLists.txt  answerfile.cpp  main.cpp  network.cpp  presenter_tui.cpp
test/files/: check-controlled-errors.sh  check-dump-answerfile.sh
test/sample/: confluent-deploy-full.sh  confluent-deploy.sh
test/sample/answerfile/: correct.answerfile.ini  rocky9-base.ini  rocky9-confluent.ini  rocky9-noib.ini  rocky9-xcat.ini  ubuntu24-xcat.ini  unordered.answerfile.ini  wrong.answerfile.ini
testing/libvirt/: README.md  opencattus-el10-lab.sh  opencattus-el8-lab.sh  opencattus-el9-lab.sh  opencattus-ubuntu24-lab.sh  run-el10-regression.sh  run-el9-regression.sh
testing/libvirt/config/: alma10-confluent.env.example  alma8-confluent.env.example  alma8-xcat.env.example  alma9-confluent.env.example  alma9-xcat.env.example  ol10-confluent.env.example  (+22 more)
(+77 files in other folders)
